packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_jsx_listeners.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1082
expression: output
---
==INPUT==


import { $, component$ } from '@builder.io/qwik';

export const Foo = component$(() => {

    return $(() => {
        const handler = $(() => console.log('reused'));
        return (
            <div
                onClick$={()=>console.log('onClick$')}
                onDocumentScroll$={()=>console.log('onDocumentScroll')}
                onDocumentScroll$={()=>console.log('onWindowScroll')}

                on-cLick$={()=>console.log('on-cLick$')}
                onDocument-sCroll$={()=>console.log('onDocument-sCroll')}
                onDocument-scroLL$={()=>console.log('onDocument-scroLL')}

                host:onClick$={()=>console.log('host:onClick$')}
                host:onDocumentScroll$={()=>console.log('host:onDocument:scroll')}
                host:onDocumentScroll$={()=>console.log('host:onWindow:scroll')}

                onKeyup$={handler}
                onDocument:keyup$={handler}
                onWindow:keyup$={handler}

                custom$={()=>console.log('custom')}
            />
        )
    });
}, {
    tagName: "my-foo",
});

============================= foo_component_div_host_ondocumentscroll_zip7mifsjry.js (ENTRY POINT)==

export const Foo_component_div_host_onDocumentScroll_Zip7mifsjRY = ()=>console.log('host:onDocument:scroll');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"mEAkBwC,IAAI,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_host_onDocumentScroll_Zip7mifsjRY",
  "entry": null,
  "displayName": "Foo_component_div_host_onDocumentScroll",
  "hash": "Zip7mifsjRY",
  "canonicalFilename": "foo_component_div_host_ondocumentscroll_zip7mifsjry",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "host:onDocumentScroll$",
  "captures": false,
  "loc": [
    712,
    753
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./foo_component_htdrsvublie"), "Foo_component_HTDRsvUbLiE"), {
    tagName: "my-foo"
});


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,wGA0BhB;IACC,SAAS;AACb,GAAG\"}")
============================= foo_component_htdrsvublie.js (ENTRY POINT)==

import { qrl } from "@builder.io/qwik";
export const Foo_component_HTDRsvUbLiE = ()=>{
    return /*#__PURE__*/ qrl(()=>import("./foo_component_1_dvu6fitwgly"), "Foo_component_1_DvU6FitWglY");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";yCAG8B;IAE1B;AAwBJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "foo_component_htdrsvublie",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    83,
    1045
  ]
}
*/
============================= foo_component_div_host_onclick_cpeh970jbey.js (ENTRY POINT)==

export const Foo_component_div_host_onClick_cPEH970JbEY = ()=>console.log('host:onClick$');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"0DAiB+B,IAAI,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_host_onClick_cPEH970JbEY",
  "entry": null,
  "displayName": "Foo_component_div_host_onClick",
  "hash": "cPEH970JbEY",
  "canonicalFilename": "foo_component_div_host_onclick_cpeh970jbey",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "host:onClick$",
  "captures": false,
  "loc": [
    638,
    670
  ]
}
*/
============================= foo_component_1_dvu6fitwgly.js (ENTRY POINT)==

import { _jsxQ } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Foo_component_1_DvU6FitWglY = ()=>{
    const handler = /*#__PURE__*/ qrl(()=>import("./foo_component_handler_h10xztd0e7w"), "Foo_component_handler_H10xZtD0e7w");
    return /*#__PURE__*/ _jsxQ("div", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./foo_component_div_onclick_m48dyiidsjw"), "Foo_component_div_onClick_M48DYiidSJw"),
        onDocumentScroll$: /*#__PURE__*/ qrl(()=>import("./foo_component_div_ondocumentscroll_rwfftfivukc"), "Foo_component_div_onDocumentScroll_rwFFtFiVuKc"),
        onDocumentScroll$: /*#__PURE__*/ qrl(()=>import("./foo_component_div_ondocumentscroll_1_cwneogpmtzi"), "Foo_component_div_onDocumentScroll_1_CwneoGpmTZI"),
        "on-cLick$": /*#__PURE__*/ qrl(()=>import("./foo_component_div_on_click_ioasjw8vyjc"), "Foo_component_div_on_cLick_IoAsJW8vYJc"),
        "onDocument-sCroll$": /*#__PURE__*/ qrl(()=>import("./foo_component_div_ondocument_scroll_5vnik61pzom"), "Foo_component_div_onDocument_sCroll_5VNik61PZOM"),
        "onDocument-scroLL$": /*#__PURE__*/ qrl(()=>import("./foo_component_div_ondocument_scroll_1q0sgr8te3g"), "Foo_component_div_onDocument_scroLL_1q0Sgr8te3g"),
        "host:onClick$": /*#__PURE__*/ qrl(()=>import("./foo_component_div_host_onclick_cpeh970jbey"), "Foo_component_div_host_onClick_cPEH970JbEY"),
        "host:onDocumentScroll$": /*#__PURE__*/ qrl(()=>import("./foo_component_div_host_ondocumentscroll_zip7mifsjry"), "Foo_component_div_host_onDocumentScroll_Zip7mifsjRY"),
        "host:onDocumentScroll$": /*#__PURE__*/ qrl(()=>import("./foo_component_div_host_ondocumentscroll_1_em1lspk7jvg"), "Foo_component_div_host_onDocumentScroll_1_Em1LspK7JVg"),
        onKeyup$: handler,
        "onDocument:keyup$": handler,
        "onWindow:keyup$": handler,
        custom$: /*#__PURE__*/ qrl(()=>import("./foo_component_div_custom_pyhnxab17ms"), "Foo_component_div_custom_pyHnxab17ms")
    }, null, 3, "u6_0");
};
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;2CAKa;IACL,MAAM;IACN,qBACI,MAAC;QACG,QAAQ;QACR,iBAAiB;QACjB,iBAAiB;QAEjB,WAAS;QACT,oBAAkB;QAClB,oBAAkB;QAPtB,eAkBE;QAlBF,wBAkBE;QAlBF,wBAkBE;QALE,UAAU;QAbd,qBAcuB;QAdvB,mBAeqB;QAEjB,OAAO;;AAGnB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_1_DvU6FitWglY",
  "entry": null,
  "displayName": "Foo_component_1",
  "hash": "DvU6FitWglY",
  "canonicalFilename": "foo_component_1_dvu6fitwgly",
  "extension": "js",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    105,
    1041
  ]
}
*/
============================= foo_component_div_host_ondocumentscroll_1_em1lspk7jvg.js (ENTRY POINT)==

export const Foo_component_div_host_onDocumentScroll_1_Em1LspK7JVg = ()=>console.log('host:onWindow:scroll');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"qEAmBwC,IAAI,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_host_onDocumentScroll_1_Em1LspK7JVg",
  "entry": null,
  "displayName": "Foo_component_div_host_onDocumentScroll_1",
  "hash": "Em1LspK7JVg",
  "canonicalFilename": "foo_component_div_host_ondocumentscroll_1_em1lspk7jvg",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "host:onDocumentScroll$",
  "captures": false,
  "loc": [
    795,
    834
  ]
}
*/
============================= foo_component_div_custom_pyhnxab17ms.js (ENTRY POINT)==

export const Foo_component_div_custom_pyHnxab17ms = ()=>console.log('custom');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"oDAyByB,IAAI,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_custom_pyHnxab17ms",
  "entry": null,
  "displayName": "Foo_component_div_custom",
  "hash": "pyHnxab17ms",
  "canonicalFilename": "foo_component_div_custom_pyhnxab17ms",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "custom$",
  "captures": false,
  "loc": [
    984,
    1009
  ]
}
*/
============================= foo_component_div_ondocument_scroll_1q0sgr8te3g.js (ENTRY POINT)==

export const Foo_component_div_onDocument_scroLL_1q0Sgr8te3g = ()=>console.log('onDocument-scroLL');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"+DAeoC,IAAI,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_onDocument_scroLL_1q0Sgr8te3g",
  "entry": null,
  "displayName": "Foo_component_div_onDocument_scroLL",
  "hash": "1q0Sgr8te3g",
  "canonicalFilename": "foo_component_div_ondocument_scroll_1q0sgr8te3g",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "onDocument-scroLL$",
  "captures": false,
  "loc": [
    568,
    604
  ]
}
*/
============================= foo_component_div_ondocumentscroll_1_cwneogpmtzi.js (ENTRY POINT)==

export const Foo_component_div_onDocumentScroll_1_CwneoGpmTZI = ()=>console.log('onWindowScroll');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"gEAWmC,IAAI,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_onDocumentScroll_1_CwneoGpmTZI",
  "entry": null,
  "displayName": "Foo_component_div_onDocumentScroll_1",
  "hash": "CwneoGpmTZI",
  "canonicalFilename": "foo_component_div_ondocumentscroll_1_cwneogpmtzi",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "onDocumentScroll$",
  "captures": false,
  "loc": [
    365,
    398
  ]
}
*/
============================= foo_component_div_on_click_ioasjw8vyjc.js (ENTRY POINT)==

export const Foo_component_div_on_cLick_IoAsJW8vYJc = ()=>console.log('on-cLick$');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"sDAa2B,IAAI,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_on_cLick_IoAsJW8vYJc",
  "entry": null,
  "displayName": "Foo_component_div_on_cLick",
  "hash": "IoAsJW8vYJc",
  "canonicalFilename": "foo_component_div_on_click_ioasjw8vyjc",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "on-cLick$",
  "captures": false,
  "loc": [
    428,
    456
  ]
}
*/
============================= foo_component_div_onclick_m48dyiidsjw.js (ENTRY POINT)==

export const Foo_component_div_onClick_M48DYiidSJw = ()=>console.log('onClick$');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"qDAS0B,IAAI,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_onClick_M48DYiidSJw",
  "entry": null,
  "displayName": "Foo_component_div_onClick",
  "hash": "M48DYiidSJw",
  "canonicalFilename": "foo_component_div_onclick_m48dyiidsjw",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    229,
    256
  ]
}
*/
============================= foo_component_div_ondocumentscroll_rwfftfivukc.js (ENTRY POINT)==

export const Foo_component_div_onDocumentScroll_rwFFtFiVuKc = ()=>console.log('onDocumentScroll');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"8DAUmC,IAAI,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_onDocumentScroll_rwFFtFiVuKc",
  "entry": null,
  "displayName": "Foo_component_div_onDocumentScroll",
  "hash": "rwFFtFiVuKc",
  "canonicalFilename": "foo_component_div_ondocumentscroll_rwfftfivukc",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "onDocumentScroll$",
  "captures": false,
  "loc": [
    293,
    328
  ]
}
*/
============================= foo_component_handler_h10xztd0e7w.js (ENTRY POINT)==

export const Foo_component_handler_H10xZtD0e7w = ()=>console.log('reused');
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"iDAM0B,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_handler_H10xZtD0e7w",
  "entry": null,
  "displayName": "Foo_component_handler",
  "hash": "H10xZtD0e7w",
  "canonicalFilename": "foo_component_handler_h10xztd0e7w",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    139,
    166
  ]
}
*/
============================= foo_component_div_ondocument_scroll_5vnik61pzom.js (ENTRY POINT)==

export const Foo_component_div_onDocument_sCroll_5VNik61PZOM = ()=>console.log('onDocument-sCroll');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"+DAcoC,IAAI,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_onDocument_sCroll_5VNik61PZOM",
  "entry": null,
  "displayName": "Foo_component_div_onDocument_sCroll",
  "hash": "5VNik61PZOM",
  "canonicalFilename": "foo_component_div_ondocument_scroll_5vnik61pzom",
  "extension": "js",
  "parent": "Foo_component_1_DvU6FitWglY",
  "ctxKind": "eventHandler",
  "ctxName": "onDocument-sCroll$",
  "captures": false,
  "loc": [
    494,
    530
  ]
}
*/
== DIAGNOSTICS ==

[]
